--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   shared_preferences: ^2.0.5
   dio: ^3.0.10
+  image_picker: ^0.6.7+21
 
 dev_dependencies:
   flutter_test:
