--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.0.5
   dio: ^3.0.10
   image_picker: ^0.6.7+21
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_test:
