--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.6.7+21
   flushbar: ^1.10.4
   google_maps_flutter: ^1.1.1
+  location: ^3.2.4
 
 dev_dependencies:
   flutter_test:
