--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,5 +54,20 @@
     <string>Needed to access location</string>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Needed to access location</string>
+    <key>LSApplicationQueriesSchemes</key>
+    	<array>
+    		<string>youtube</string>
+    		<string>googlechromes</string>
+    		<string>comgooglemaps</string>
+    		<string>fb</string>
+    	</array>
+    <key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>youtube</string>
+		<string>googlechromes</string>
+		<string>comgooglemaps</string>
+		<string>fb</string>
+	</array>
+
 </dict>
 </plist>
