--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flushbar: ^1.10.4
   google_maps_flutter: ^1.1.1
   location: ^3.2.4
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
