--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   google_maps_flutter: ^1.1.1
   location: ^3.2.4
   url_launcher: ^6.0.3
+  flutter_bloc: ^6.1.1
+  equatable: ^1.2.5
+  rxdart: ^0.25.0
 
 dev_dependencies:
   flutter_test:
