--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,13 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+  flutter_launcher_icons: ^0.9.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+
 flutter:
 
   # The following line ensures that the Material Icons font is
